--- a/views/users/shoping-cart.ejs
+++ b/views/users/shoping-cart.ejs
@@ -333,13 +333,13 @@
 							</div>
 
 							<div class="size-209">
-								<span class="mtext-110 cl2" id="grandTotal">
+								<span class="mtext-110 cl2" id="totalAmount">
 									$<%= totalAmount %>
 								</span>
 							</div>
 						</div>
 
-						<div class="flex-w flex-t bor12 p-t-15 p-b-30">
+						<!-- <div class="flex-w flex-t bor12 p-t-15 p-b-30">
 							<div class="size-208 w-full-ssm">
 								<span class="stext-110 cl2">
 									Shipping:
@@ -385,7 +385,7 @@
 
 								</div>
 							</div>
-						</div>
+						</div> -->
 
 						<div class="flex-w flex-t p-t-27 p-b-33">
 							<div class="size-208">
@@ -395,7 +395,7 @@
 							</div>
 
 							<div class="size-209 p-t-1">
-								<span class="mtext-110 cl2" id="grandTotal">
+								<span class="mtext-110 cl2" id="totalAmount">
 									$<%= totalAmount %>
 								</span>
 							</div>
